--- a/template/en/default/global/user-error.html.tmpl
+++ b/template/en/default/global/user-error.html.tmpl
@@ -1357,15 +1357,15 @@
     [% admindocslinks = {'voting.html' => 'Setting up the voting feature'} %]
     You may only use at most [% max FILTER html %] votes for a single
     [%+ terms.bug %] in the
-    <tt>[% prod FILTER html %]</tt> product, but you are trying to
+    <tt>[% product FILTER html %]</tt> product, but you are trying to
     use [% votes FILTER html %].
 
   [% ELSIF error == "too_many_votes_for_product" %]
     [% title = "Illegal Vote" %]
     [% admindocslinks = {'voting.html' => 'Setting up the voting feature'} %]
-    You tried to use [% votes FILTER html %] votes,
-    which exceeds the [% max FILTER html %] vote per [% terms.bug %] limit
-    for the <tt>[% prod FILTER html %]</tt> product.
+    You tried to use [% votes FILTER html %] votes in the
+    <tt>[% product FILTER html %]</tt> product, which exceeds the maximum of
+    [%+ max FILTER html %] votes for this product.
 
   [% ELSIF error == "token_inexistent" %]
     [% title = "Token Does Not Exist" %]
