--- a/template/en/default/admin/params/mta.html.tmpl
+++ b/template/en/default/admin/params/mta.html.tmpl
@@ -58,6 +58,9 @@
 
   whinedays => "The number of days that we'll let a $terms.bug sit untouched in a NEW " _
                "state before our cronjob will whine at the owner.<br> " _
-               "Set to 0 to disable whining." }
+               "Set to 0 to disable whining.",
+
+  globalwatchers => "A comma-separated list of users who should receive a " _
+                    "copy of every notification mail the system sends." }
 
 %]
